--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -39,7 +39,7 @@ antagonism ,/n./@敵對;,/n./@對抗;
 antagonist ,/n./@敵手;,/n./@敵人;,/n./@對手;
 antagonize ,/v./@激怒;
 antecedent ,/n./@觸角;,/adj./@前面的;,/n./@天線;
-antibiotic ,/n.//adj./@抗生的;
+antibiotic ,/adj./@抗生的;,/n./@抗生素;
 anticipant ,/adj./@预期的;
 anticipate ,/v./@预期;
 antimatter ,/n./@反物质;
@@ -93,6 +93,7 @@ burdensome ,/adj./@沉重的;
 bureaucrat ,/n./@官僚;
 calculator ,/n./@計算器;
 camerlengo ,/n./@教皇内侍;
+cannonball ,/n./@炮弹;
 capability ,/n./@能力;,/n./@才能;
 capacities ,/n./@能力;
 celebrated ,/adj./@有名的;
@@ -142,6 +143,7 @@ conductive ,/adj./@传导的;
 conference ,/n./@会议;
 confession ,/n./@忏悔;,/n./@供认;
 confidence ,/n./@自信;,/n./@自信心;
+confiscate ,/vt./@没收;
 conformity ,/n./@遵守;
 congestion ,/n./@阻塞;
 congregate ,/v./@聚集;
@@ -190,6 +192,7 @@ definitive ,/adj./@定义的;,/adj./@决定的;
 delectable ,/adj./@美味的;
 delegation ,/n./@代表团;,/n./@授权;,/n./@委托;
 deliberate ,/adj./@故意的;,/adj./@慎重的;
+delinquent ,/n./@罪犯;,/adj./@有违法倾向的;,/adj./@有犯罪傾向的;
 delusional ,/adj./@妄想的;
 democratic ,/adj./@民主的;
 denominate ,/v./@命名;
@@ -376,6 +379,7 @@ meditation ,/n./@冥想;
 melancholy ,/n./@忧郁;,/n./@悲哀;,/n./@愁思;,/adj./@忧郁的;,/adj./@悲伤的;
 membership ,/n./@會員資格;,/n./@全體成員;
 metallurgy ,/n./@冶金学;
+methodical ,/adj./@有条理的;,/adj./@有条不紊的;
 microscope ,/n./@显微镜;
 millennium ,/n./@千禧年;,/n./@千年期;,/n./@太平盛世;,/n./@黃金時代;
 millilitre ,/n./@毫升;
@@ -391,6 +395,7 @@ motivation ,/n./@动力;
 multiplier ,/n./@乘數;,/n./@倍增器;
 munificent ,/adj./@慷慨的;,/adj./@豐厚的;,/adj./@寬宏的;
 mutability ,/n./@易變性;
+mutilation ,/n./@伤害;,/n./@截除;,/n./@损坏;,/n./@损伤;
 myocardial ,/adj./@心肌的;
 mysterious ,/adj./@神秘的;
 navigation ,/n./@航行;,/n./@航海;
@@ -537,6 +542,7 @@ subsection ,/n./@分段;,/n./@细分;
 subsequent ,/adj./@后来的;,/adj./@随后的;
 subsidiary ,/adj./@輔助的;
 substitute ,/n.//v./@代替;,/n./@代替品;
+subversive ,/adj./@颠覆性的;
 successful ,/adj./@成功的;
 succession ,/adj./@连续的;
 sufficient ,/adj./@足够的;
