--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -35,7 +35,7 @@ calculation ,/n./@计算;
 carnivorous ,/adj./@食肉的;
 celebration ,/n./@庆祝;
 certificate ,/n./@证书;,/vt./以证书@授权;,/vt./以证书@批准;
-charismatic ,/adj./@吸引人的;
+charismatic ,/adj./@吸引人的;,/adj./@蒙受神恩的;,/adj./@有魅力的;
 clandestine ,/adj./@隱藏的;,/adj./@秘密的;
 coincidence ,/n./@巧合;
 collaborate ,/v./@合作;,/v./@勾结;,/v./@通敌;
@@ -95,6 +95,7 @@ dangerously ,/adv./@危险地;
 declaration ,/n./@声明;
 deformation ,/n./@变形;
 deliverance ,/n./@解救;,/n./@救助;,/n./@釋放;
+demographic ,/adj./@人口学的;
 demonstrate ,/v./@证明;,/v./@展示;,/v./@示威;
 description ,/n./@描述;
 designation ,/n./@设计;
