--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -29,6 +29,7 @@ circumcentre ,/n./@外心;
 circumscribe ,/v./@限制;
 circumstance ,/n./@环境;,/n./@情况;,/n./@境遇;,/n./@事件;
 civilization ,/n./@文明;
+cohabitation ,/n./@同居;
 colonization ,/n./@殖民;,/n./@定植;,/n./@定殖;
 commonwealth ,/n./@共和国;
 complication ,/n./@复杂;,/n./@复杂化;
@@ -58,6 +59,7 @@ covetousness ,/n./@貪婪;,/n./@貪心;,/n./@妄羡;
 degeneration ,/n./@退化;
 deliberately ,/adv./@故意的;,/adv./@慎重地;
 deliberation ,/n./@慎重;,/n./@故意;
+demographics ,/n./@人口统计资料;
 denomination ,/n./@名称;,/n./@教派;,/n./@面额;
 disadvantage ,/n./@不利;
 disagreement ,/n./@争执;,/n./@不符;
@@ -125,9 +127,11 @@ organisation ,/n./@组织;
 organization ,/n./@组织;
 ostentatious ,/adj./@招搖的;,/adj./@誇耀的;
 overestimate ,/v./@高估;
+paramilitary ,/adj./@准军事的;
 participance ,/n./@参与;,/n./@分享;
 participancy ,/n./@参与;,/n./@分享;
 particularly ,/adv./@特别;
+penitentiary ,/n./@监狱;
 periodically ,/adv./@阶段性的;
 perseverance ,/n./@坚持;
 perspiration ,/n./@流汗;
