--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -38,6 +38,7 @@ controversial ,/adj./@有争议的;
 correspondent ,/adj./@相关联的;
 corresponding ,/adj./@相当的;
 counterattack ,/v./@反擊;,/v./@反攻;
+counterweight ,/n./@平衡;,/n./@平衡重;
 demonstration ,/n./@示範;,/n./@展示;,/n./@示威;
 deterioration ,/n./@惡化;,/n./@退化;,/n./@墮落;
 determination ,/n./@决心;
@@ -48,6 +49,7 @@ documentation ,/n./@文档;,/n./@文献;,/n./@文件;,/n./@资料;
 entertainment ,/n./@娱乐;
 environmental ,/adj./@環境的;,/adj./@周圍的;
 establishment ,/n./@确立;,/n./@制定;
+extermination ,/n./@消灭;,/n./@灭绝;
 extraordinary ,/adj./@特别的;,/adj./@非凡的;
 globalization ,/n./@全球化;
 heterogeneous ,/adj./@多相的;,/adj./@異種的;,/adj./@不均勻的;,/adj./@由不同成分形成的;
@@ -90,6 +92,7 @@ seismological ,/adj./@地震学的;
 semiconductor ,/n./@半導體;
 sophisticated ,/adj./@复杂的;
 specification ,/n./@规格;,/n./@说明书;,/n./@详述;
+subordination ,/n./@从属;,/n./@顺从;
 superannuated ,/adj./@過時的;,/adj./@老朽的;
 supplementary ,/adj./@增补的;
 temperamental ,/adj./@喜怒无常的;,/adj./@性情的;
