--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -382,6 +382,7 @@ grit ,/v./@研磨;
 grow ,/v./@長大;
 gulf ,/n./@海灣;,/n./@深淵;,/n./@鴻溝;
 gulp ,/v./@吞嚥;
+gush ,/vi./@涌出;,/vi./@喷出;,/n./@涌出;,/n./@喷出;
 gust ,/n./@一陣@狂風;,/n./@一陣@暴雨;,/n./@一陣@狂笑;
 hail ,/n./@冰雹;
 hair ,/n./@頭发;
@@ -394,6 +395,7 @@ hand ,/n./@手;
 hang ,/v./@懸掛;
 hard ,/adj./@堅硬的;,/adj./@困難的;
 hare ,/n./@野兔;
+hark ,/vi./@听;
 harm ,/v./@傷害;,/n./@傷害;,/n./@損害;,/vt./@危害;,/vt./@损害;
 hash ,/n./@混雜;
 hate ,/v./@恨;,/v./@厭;
@@ -434,6 +436,7 @@ home ,/n./@家;
 hoof ,/v./@步行;,/n./@蹄;
 hook ,/n./@鉤子;
 hoop ,/n./@箍;,/n./@鐵環;
+hoot ,/n./@鸣叫声;,/n./@嘲笑;,/n./@大笑;,/n./@滑稽可笑的人;,/vi./@鸣叫;,/vi./@鸣响;,/vi./@嘲笑;
 hope ,/v./@希望;
 host ,/n./@主人;
 hour ,/n./@小時;
@@ -1041,7 +1044,7 @@ were ,/v./@是@<are的過去式>;
 west ,/n./@西;,/adv./@向西;
 what ,/pron./@什麽;
 when ,/adv./@何時;
-whip ,/vt./@抽打;,/n./@鞭;
+whip ,/vt./@抽打;,/n./@鞭;,/vi./@挥动;
 whom ,/pron./@谁;
 wide ,/adj./@寬的;,/n./@寬;
 wild ,/adj./@野生的;,/adj./@野蠻的;,/adj./@瘋狂的;
