--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1,6 +1,7 @@
 abbey ,/n./@大修道院;
 abhor ,/v./@極度厭惡;
 abide ,/v./@遵守;
+abode ,/n./@住所;,/n./@居住;
 abort ,/v./@中斷;,/v./@流產;
 about ,/prep./@關於;,/prep./@大約;
 abuse ,/v./@濫用;,/v./@虐待;,/v./@辱罵;
@@ -416,6 +417,7 @@ fever ,/n./@发燒;
 fibre ,/n./@纖維;
 field ,/n./@場;,/n./@領域;,/n./@田野;,/n./@戰場;
 fiend ,/n./@魔鬼;
+fiery ,/adj./@燃烧着的;
 fight ,/v./@爭斗;,/v./@戰斗;
 final ,/adj./@最終的;
 first ,/adj./@第一的;
@@ -648,8 +650,8 @@ magic ,/n./@魔術;
 major ,/adj./@主要的;
 mango ,/n./@芒果;
 mania ,/n./@狂熱;
-march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
 March ,/n./@三月;
+march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
 match ,/v./@競賽;,/v./@相配;,/n./@火柴;,/v./@敵得過;,/n./@對手;
 maths ,/n./@數學;
 maxim ,/n./@格言;,/n./@準則;,/n./@座右銘;
@@ -710,6 +712,7 @@ niche ,/n./@壁龕;,/n./@合適的職業;,/n./@專營市場;
 night ,/n./@晚上;
 noble ,/adj./@髙貴的;,/n./@貴族;
 noise ,/n./@噪音;,/n./@聲音;
+nomad ,/n./@流浪者;,/n./@游牧者;
 north ,/n./@北方;
 notch ,/n./@劃痕;,/n./@凹口;,/n./@等級;,/n./@峽谷;,/v./@贏得;
 novel ,/adj./@新穎的;
@@ -782,7 +785,7 @@ pitch ,/v./@投擲;
 pivot ,/n./@樞軸;,/n./@中心點;,/adj./@樞軸的;
 pixel ,/n./@像素;
 place ,/n./@地點;
-plain ,/adj./@原始的;,/adj./@樸素的;
+plain ,/adj./@原始的;,/adj./@樸素的;,/n./@平原;
 plait ,/n./褶;,/v./@編織;
 plane ,/n./@飛機;
 plant ,/n./@植物;,/v./@栽培;,/n./@工廠;
