--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -84,6 +84,7 @@ assert ,/v./@斷言;,/v./@堅持;
 assess ,/v./@評估;
 assign ,/v./@分配;
 assist ,/v./@協助;
+assize ,/n./@巡回审判;
 assume ,/v./@猜想;
 assure ,/v./(使)@確信;
 astray ,/adj./@迷失的;,/adj./@误入歧途的;,/adv./@迷路地;,/adv./@误入歧途地;,/adv./@遗失;
@@ -110,7 +111,7 @@ backup ,/n./@備份;
 baffle ,/v./(使)@困惑;
 ballad ,/n./@歌謠;,/n./@民謠;,/n./@敘事歌謠;
 ballet ,/n./@芭蕾舞;
-ballot ,/v./@投票;
+ballot ,/v./@投票;,/n./@投票;
 banana ,/n./@香蕉;
 bandit ,/n./@盜賊;,/n./@强盜;,/n./@土匪;,/n./@匪徒;,/n./@盜匪;
 banish ,/v./@放逐;,/v./@驅逐;
@@ -141,6 +142,7 @@ betray ,/v./@背叛;,/v./@出賣;
 better ,/adj./@更好的;
 beware ,/vi./@當心;,/v./@小心;,/v./@提防;
 beyond ,/v./@超過;
+biceps ,/n.//pl./@二头肌;
 billet ,/n./@便條;,/n./@短簡;
 binary ,/adj./@二進制的;,/adj./@二元的;
 bitter ,/adj./@苦的;
@@ -179,6 +181,7 @@ budgie ,/n./@虎皮鸚鵡;,/n./@相思鸚鵡;
 buffer ,/n./@緩衝區;
 buffet ,/n./@自助餐;
 bullet ,/n./@子彈;
+bumper ,/n./@保险杠;,/adj./@丰收的;,/adj./@特大的;
 bundle ,/n./@捆;
 bunker ,/n./@掩體;,/n./@地堡;,/n./@沙坑;
 burden ,/n./@重負;
@@ -193,8 +196,8 @@ camera ,/n./@照相機;
 campus ,/n./@校園;
 Canada ,/n./@加拿大;
 cancel ,/v./@取消;
-Cancer ,/n./@巨蟹座;
 cancer ,/n./@癌症;
+Cancer ,/n./@巨蟹座;
 candid ,/adj./@坦白的;,/adj./@直率的;
 cannon ,/n./@大炮;,/n./@加農炮;
 cannot ,/v./@不能;
@@ -226,6 +229,7 @@ change ,/v./@改變;
 chapel ,/n./@小教堂;
 charge ,/v./@收費;,/v./@充電;
 chaste ,/adj./@純潔的;,/adj./@貞潔的;,/adj./@有道德的;,/adj./@樸素的;
+cheeky ,/adj./@放肆的;
 cheese ,/n./@乳酪;
 cheque ,/n./@支票;
 cherry ,/n./@櫻桃;
@@ -362,6 +366,7 @@ desire ,/v./@慾望;
 detach ,/v./@分離;,/v./@拆卸;
 detail ,/n./@細節;
 detect ,/v./@察覺;
+detour ,/vi./@绕行;,/vi./@绕道;,/n./@绕行;,/n./@绕道;
 device ,/n./@設備;
 devote ,/v./@奉獻;
 devout ,/adj./@虔誠的;,/adj./@衷心的;
@@ -416,6 +421,7 @@ empire ,/n./@帝國;
 employ ,/v./@雇用;
 encore ,/n./@再唱;,/n./@加演;
 endian ,/n./@字节序;
+endive ,/n./@苣荬菜;,/n./@菊苣;
 endure ,/v./@容忍;,/v./@忍耐;
 energy ,/n./@能量;
 engage ,/v./@使從事;,/v./@吸引;,/v./@佔用;
@@ -428,7 +434,7 @@ enroll ,/v./@登記;
 ensure ,/v./@保證;
 entail ,/v./@遺留;,/v./@蘊含;,/v./@需要;
 entice ,/v./@引诱;,/v./@诱惑;,/v./@吸引;,/v./@诱使;,/v./@怂恿;
-entire ,/adj./@整個的;
+entire ,/adj./@整個的;,/adj./@全部的;
 entity ,/n./@實體;
 equate ,/v./@等同;
 equity ,/n./@公平;
@@ -546,6 +552,7 @@ genome ,/n./@基因组;,/n./@染色体组;
 gentle ,/adj./@輕柔的;
 gently ,/adj./@輕柔的;
 gerund ,/n./@動名詞;
+ghetto ,/n./@贫民区;,/n./@貧民窟;,/n./@少数族裔聚居区;,/n./@犹太人居住区;
 giggle ,/v./@咯咯笑;
 ginger ,/n./@薑;
 glance ,/v./@掃視;,/v./@瞥;
@@ -592,7 +599,7 @@ heaven ,/n./@天堂;,/n./@天空;
 heckle ,/v./@詰問;
 height ,/n./@髙;,/n./@髙度;
 helium ,/n./@氦;
-herald ,/n./@先驅;,/n./@先兆;
+herald ,/n./@先驅;,/n./@先兆;,/vt./@宣告;
 here's ,/n.v./@這是;
 hereby ,/adv./@以此;
 heresy ,/n./@異端;,/n./@邪教;
@@ -641,6 +648,7 @@ inhale ,/v./@吸氣;
 inject ,/v./@註射;
 injure ,/vt./@損傷;,/v./@傷害;
 injury ,/n./@傷害;
+inmate ,/n./@同住者;,/n./@同院病人;,/n./@同狱犯人;
 insane ,/adj./@瘋狂的;
 insect ,/n./@昆蟲;
 insert ,/v./@插入;
@@ -853,7 +861,7 @@ ordain ,/v./@命令;,/v./@任命;,/v./@注定;
 orgasm ,/n./@性髙潮;
 orient ,/adj./@東方的;
 origin ,/n./@起源;
-ornate ,/adj./@華麗的;,/adj./@裝飾的;
+ornate ,/adj./@華麗的;,/adj./@裝飾的;,/adj./@华美的;,/adj./@豪华的;
 orphan ,/n./@孤兒;
 others ,/pron./@其他人;
 ouster ,/n./@驅逐;,/n./@罷黜;,/n./@剝奪;
@@ -865,6 +873,7 @@ packet ,/n./@小包;,/n./@小盒;
 paddle ,/v./@劃槳;,/n./@槳;,/v./@攪;
 palace ,/n./@宮殿;
 palate ,/n./@味覺;
+papist ,/n./@天主教徒;
 parade ,/n./@遊行;
 parcel ,/v./@分配;,/n./@包裹;
 pardon ,/v./@寬恕;
@@ -1051,6 +1060,7 @@ ribbon ,/n./@帶;,/n./@緞帶;
 riddle ,/n./@字謎;
 riffle ,/n./@淺灘;,/n./@急流;,/v./@翻閲;,/v./@洗牌;
 rights ,/n./@權利;
+rigour ,/n./@严酷;,/n./@严苛;,/n./@严谨;,/n./@严格;,/n./@缜密;
 robber ,/n./@強盜;
 Robert ,/n./@羅伯特;
 robust ,/adj./@健壯的;,/adj./@強壯的;
@@ -1352,6 +1362,7 @@ utmost ,/adj./@極度的;,/n./@極限;
 utopia ,/n./@烏托邦;
 Utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
+vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
 vagina ,/n./@陰道;
 vainly ,/adv./@徒勞地;
