--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -121,6 +121,7 @@ believe ,/v./@相信;
 beloved ,/adj./@敬愛的;,/n./@愛人;
 beneath ,/prep./(在...)@之下;
 benefit ,/n./@利益;
+bereave ,/vt./使@丧失;,/vt./使@失去;
 besides ,/adv.//prep./@除此之外;
 besiege ,/v./@圍;,/v./@包圍;,/v./@圍困;,/v./@圍攻;
 between ,/prep./@在之間;
@@ -194,7 +195,7 @@ ceramic ,/adj./@陶瓷的;
 certain ,/adj./@某一;,/adj./@必然的;,/adj./@確信;,/adj./@有把握的;
 certify ,/v./@證明;,/v./@保證;
 chalice ,/n./@杯;,/n./@酒杯;
-chamber ,/n./@會議室;,/n./@會所;
+chamber ,/n./@會議室;,/n./@會所;,/n./@大厅;
 chaotic ,/adj./@混亂的;,/adj./@紊亂的;
 chapter ,/n./@章節;
 charity ,/n./@慈善;,/n./@施捨;,/n./@仁慈;
@@ -254,7 +255,7 @@ concord ,/n./@一致;,/n./@和睦;
 condemn ,/v./@譴責;,/v./@判@刑;
 conduct ,/v./@帶領;,/v./@管理;,/v./@引導;,/v./@實施;,/v./@導電;
 confess ,/v./@忏悔;
-confine ,/v./@限制;,/v./@禁閉;,/n./@限制;,/n./@約束;,/n./@界限;
+confine ,/v./@限制;,/v./@禁閉;,/n./@限制;,/n./@約束;,/n./@界限;,/vt./@监禁;
 confirm ,/v./@證實;
 conform ,/v./@符合;,/v./@遵守;
 confuse ,/v./@使困惑;
@@ -651,7 +652,7 @@ laborer ,/n./@勞工;,/n./@勞動者;
 lacquer ,/n./@漆;,/n./@漆器;,/v./@塗@漆;
 lambast ,/v./@鞭打;,/v./@痛斥;
 lantern ,/n./@燈籠;
-lateral ,/adj./@橫向的;,/adj./@側向的;
+lateral ,/adj./@橫向的;,/adj./@側向的;,/adj./@侧面的;
 lattice ,/n./@晶格;,/n./@框架;,/n./@結構;,/n./@格子;
 launder ,/v./@洗滌;,/v./@清洗;
 laundry ,/n./@洗衣店;
@@ -728,6 +729,7 @@ montage ,/n./@蒙太奇;
 monthly ,/n./@月刊;
 morning ,/n./@早上;
 mulatto ,/n./@黑白混血兒;
+mundane ,/adj./@平凡的;,/adj./@世俗的;,/adj./@乏味的;
 musical ,/adj./@音樂的;,/n./@歌舞片;
 mustard ,/n./@芥末;
 mystery ,/n./@謎;
@@ -835,6 +837,7 @@ perturb ,/vt./@煩擾;
 pervert ,/v./@濫用;,/n./@變態;,/v./@腐蝕;,/v./@歪曲;
 petrify ,/vt./@吓呆;,/vt./@石化;,/vi./@石化;
 phantom ,/n./@幽靈;,/n./@幻影;
+pharaoh ,/n./@法老;
 phoenix ,/n./@鳳凰;
 physics ,/n./@物理學;
 picture ,/n./@圖片;
@@ -923,6 +926,7 @@ pyramid ,/n./@金字塔;
 qualify ,/v./@限制;,/v./@合格;,/v./@授權;
 quality ,/n./@質量;
 quantum ,/n./@量子;
+quarter ,/n./@四分之一;,/n./@一刻钟;,/n./@城区;,/n./@群体;,/n./@夸特;,/n./@住处;,/n./@慈悲;,/n./@方位;,/n./@船尾;,/n./@盾的四分之一;
 quibble ,/vi./@吹毛求疵;,/vi./@挑刺;,/vi./@抱怨;,/n./@牢骚;
 quicken ,/v./@加快;
 quickly ,/adv./@快速地;,/adv./@快;
