--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -30,6 +30,7 @@ advocate ,/v./@提倡;
 affinity ,/n./@密切;,/n./@吸引力;,/n./@喜歡;
 affluent ,/adj./@富裕的;,/adj./@丰富的;
 aggrieve ,/v./@使苦惱;
+agitator ,/n./@鼓动者;,/n./@搅拌器;
 aircraft ,/n./@飛行器;,/n./@航空器;
 airdrome ,/n./@飛機場;
 airstrip ,/n./@飛機跑道;
@@ -62,6 +63,7 @@ antelope ,/n./@羚羊;
 anterior ,/adj./@前面的;
 antidote ,/n./@解毒劑;,/n./@解藥;
 anything ,/pron./@任何事;
+aperitif ,/n./@开胃酒;
 aperture ,/n./@孔;,/n./@穴;
 aphorism ,/n./@格言;
 apostasy ,/n./@變節;,/n./@背叛;
@@ -120,7 +122,7 @@ birthday ,/n./@生日;
 bisexual ,/adj./@兩性的;
 blackout ,/n./@黑屏;
 blockade ,/n./@封鎖;,/n./@阻塞;
-blockage ,/n./@封鎖;
+blockage ,/n./@封鎖;,/n./@阻塞;,/n./@阻塞物;
 blowhard ,/n./@吹牛大家;
 bonhomie ,/n./@溫和;,/n./@和藹;
 bookworm ,/n./@书虫;,/n./@书呆子;
@@ -142,6 +144,7 @@ campaign ,/n./@戰役;,/n./@運動;
 canister ,/n./@筒;,/n./@罐;
 cannibal ,/n./@食人者;,/n./@吃同類的動物;,/adj./@食人肉的;,/adj./@食同類的;
 capacity ,/n./@容量;,/n./@容積;
+capstone ,/n./@顶石;,/n./@压顶石;
 carapace ,/n./@殼;,/n./@甲殼;
 cardinal ,/adj./@主要的;,/adj./@鲜红色的;,/n./@红衣主教;
 careless ,/adj./@马虎的;,/adj./@疏忽的;
@@ -162,6 +165,7 @@ ceremony ,/n./@仪式;,/n./@典礼;,/n./@礼节;
 chairman ,/n./@主席;
 champion ,/n./@冠军;
 charming ,/adj./@迷人的;
+chastity ,/n./@贞洁;
 chemical ,/adj./@化学的;,/n./@化学药品;,/n./@化学制品;
 chestnut ,/n./@栗子;,/n./@栗樹;
 childish ,/adj./@幼稚的;
@@ -211,6 +215,7 @@ consider ,/v./@考虑;
 conspire ,/vi./@密谋;,/v./@合谋;
 constant ,/adj./@恒定的;,/adj./@不变的;
 consumer ,/n./@消费者;
+contempt ,/n./@蔑视;,/n./@藐视;
 contents ,/n./@目录;
 continue ,/v./@继续;
 contract ,/n./@合同;,/n./@契约;
@@ -264,6 +269,7 @@ defeated ,/adj./@被打败的;
 defector ,/n./@叛徒;,/n./@逃兵;
 defender ,/n./@守卫者;
 definite ,/adj./@清楚的;,/adj./@明确的;
+dejected ,/adj./@沮丧的;,/adj./@情绪低落的;,/adj./@垂头丧气的;
 delegate ,/n./@委派;,/n./@代表;
 delicate ,/adj./@精致的;,/adj./@微妙的;,/adj./@精美的;,/adj./@柔和的;,/adj./@纖弱的;,/adj./@優雅的;
 delusion ,/n./@迷惑;,/n./@错觉;
@@ -364,6 +370,7 @@ entrance ,/n./@入口;
 entrench ,/v./@確立;,/v./@牢固;,/v./@挖掘;,/v./@用壕溝圍住;
 envelope ,/n./@信封;
 enviable ,/adj./@值得羡慕的;
+envision ,/vt./@想象;
 epidemic ,/adj./@流行的;,/adj./@傳染性的;,/n./@傳染病;,/n./@流行病;
 epilogue ,/n./@尾聲;,/n./@結局;
 epiphany ,/n./@頓悟;,/n./@顯現;,/n./@主顯節;
@@ -414,6 +421,7 @@ fidelity ,/n./@忠誠;
 filicide ,/n./@杀害子女;
 firework ,/n./@烟花;
 flagship ,/n./@旗舰;
+flawless ,/adj./@完美的;
 fleeting ,/adj./@短暂的;
 flexible ,/adj./@灵活的;
 flippant ,/adj./@輕率的;
@@ -471,6 +479,7 @@ handsome ,/adj./@帅气的;
 headache ,/n./@头痛;
 headline ,/n./@头条;
 hedgehog ,/n./@刺猬;
+heraldry ,/n./@纹章学;,/n./@盛典;
 heritage ,/n./@遗产;,/n./@传统;
 hesitant ,/adj./@猶豫的;
 hesitate ,/v./@犹豫;
@@ -553,6 +562,7 @@ jealousy ,/n./@妒忌;
 jeopardy ,/n./@危險;
 jetliner ,/n./@噴氣客機;
 judicial ,/adj./@司法的;
+junction ,/n./@会合处;,/n./@交叉路口;
 juvenile ,/adj./@青少年的;,/n./@少年;,/n./@幼兽;,/n./@雏鸟;
 kangaroo ,/n./@袋鼠;
 keyboard ,/n./@键盘;
@@ -655,6 +665,7 @@ nickname ,/n./@绰号;
 nineteen ,/adj./@十九;
 nominate ,/v./@提名;,/v./@推薦;,/v./@任命;,/v./@指定;
 nonsense ,/n./@废话;,/n./@无稽之谈;
+normalcy ,/n./@正常状态;,/n./@常态;
 notation ,/n./@符号;,/n./@记号法;,/n./@注释;,/n./@乐谱;
 notebook ,/n./@笔记本;
 November ,/n./@十一月;
@@ -706,6 +717,7 @@ painting ,/n./@绘画;
 Paladins ,/n./@圣骑士;
 palpable ,/adj./@明顯的;,/adj./@易覺察的;
 pantheon ,/n./@万神殿;
+parabola ,/n./@抛物线;
 paradigm ,/n./@範式;,/n./@範例;
 paradise ,/n./@天堂;,/n./@天國;
 parallax ,/n./@视差;
@@ -727,6 +739,7 @@ penalize ,/v./@惩罚;
 pendulum ,/n./@摆;
 penitent ,/adj./@懺悔的;,/adj./@悔過的;
 pentagon ,/n./@五边形;,/n./@五角形;
+penumbra ,/n./@半阴影;,/n./@半影;
 perceive ,/v./@察觉;,/v./@理解;,/v./@領悟;,/v./@感知;,/v./@意识到;
 periodic ,/adj./@周期的;
 personal ,/adj./@个人的;
@@ -782,6 +795,7 @@ protocol ,/n./@協議;
 prudence ,/n./@謹慎;
 punctual ,/adj./@准时的;
 puncture ,/v./@刺穿;
+punitive ,/adj./@惩罚性的;,/adj./@苛刻的;
 purchase ,/v./@购买;
 quackery ,/n./@庸医的医术;,/n./@欺骗行为;
 quantity ,/n./@量;
@@ -826,6 +840,7 @@ restrain ,/v./@抑制;
 restrict ,/v./@限制;
 retrieve ,/v./@找回;
 revenant ,/adj./@归来的;,/adj./@亡魂的;,/adj./@幽灵的;,/n./@亡魂;
+reversal ,/n./@颠倒;,/n./@逆转;,/n./@对调;,/n./@撤销;
 revision ,/n./@复习;,/n./@修订;
 rhapsody ,/n./@狂想曲;
 ridicule ,/v./@嘲笑;
@@ -933,6 +948,7 @@ subtract ,/vt./@减;
 suburban ,/adj./@郊区的;
 succinct ,/adj./@簡潔的;,/adj./@簡明的;,/adj./@簡練的;,/adj./@緊身的;
 suddenly ,/adv./@突然;,/adv./@忽然;
+suffrage ,/n./@选举权;,/n./@投票选举;
 suitable ,/adj./@合适的;
 suitcase ,/n./@手提箱;
 sunshine ,/n./@阳光;
