--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -239,6 +239,7 @@ demanding ,/adj./@要求严苛的;
 democracy ,/n./@民主;,/n./@民主主义;
 departure ,/n./@离开;,/n./@出发;,/n./@违背;
 dependent ,/n./@依赖性的;
+depravity ,/n./@堕落;
 deprecate ,/v./@反对;,/v./@抨击;
 desertion ,/n./@遺棄;,/n./@離棄;,/n./@逃亡;,/n./@逃跑;
 designate ,/v./@制定;
@@ -331,6 +332,7 @@ etiquette ,/n./@禮節;,/n./@礼仪;,/n./@规矩;
 evaporate ,/v./@蒸發;,/v./@脫水;,/v./@消失;
 evolution ,/n./@進化;,/n./@發展;
 Excalibur ,/n./@神劍;,/n./@聖劍;
+excavator ,/n./@挖掘机;,/n./@发掘者;
 exceeding ,/adj./@极其;
 excellent ,/adj./@卓越的;,/adj./@极好的;
 exception ,/n./@例外;
@@ -369,6 +371,7 @@ financial ,/adj./@经济的;
 firstname ,/n./@名;
 fisherman ,/n./@漁夫;,/n./@漁民;
 flattened ,/adj./@沒精打采的;
+flippancy ,/n./@轻率;,/n./@轻率无礼;
 fluctuate ,/v./@波動;,/v./@起伏;
 following ,/adj./@下列的;
 footprint ,/n./@足迹;,/n./@脚印;,/n./@印记;
@@ -380,7 +383,7 @@ fortitude ,/n./@剛毅;,/n./@堅毅;,/n./@不屈不撓;
 fortunate ,/adj./@幸運的;
 framework ,/n./@框架;,/n./@体系;
 franchise ,/n./@特權;,/n./@公民權;,/n./@經銷權;
-fraternal ,/adj./@兄弟般的;
+fraternal ,/adj./@兄弟般的;,/adj./@兄弟的;
 freelance ,/n./@自由作家;,/n./@自由记者;
 frequency ,/n./@频率;
 fruitless ,/adj./@徒劳的;
@@ -545,6 +548,7 @@ objection ,/n./@反对;
 objective ,/adj./@客观的;
 oblivious ,/adj./@健忘的;
 obnoxious ,/adj./@可憎的;
+obscurity ,/n./@晦涩;,/n./@默默无闻;
 obsession ,/n./@迷戀;,/n./@沉迷;,/n./@癡迷;
 obstinacy ,/n./@固執;
 obstinate ,/adj./@頑固的;,/adj./@固執的;
@@ -581,6 +585,7 @@ partially ,/adv./@部分地;
 partition ,/n./@分隔;,/n./@划分;,/n./@隔开;
 passenger ,/n./@旅客;
 passer-by ,/n./@过路人;
+patriarch ,/n./@族长;,/n./@元老;,/n./@大主教;
 patricide ,/n./@杀父;
 patronage ,/n./@贊助;,/n./@資助;,/n./@保護人身份;
 patronize ,/v./@保護;
@@ -599,11 +604,13 @@ pervasive ,/adj./@普遍的;,/adj./@流行的;
 pessimism ,/n./@悲观;
 petroleum ,/n./@石油;
 petulance ,/n./@易怒;,/n./@暴躁;
+pharaonic ,/adj./@法老的;,/adj./@法老時代的;
 phonetics ,/n./@語音學;
 physician ,/n./@内科醫生;
 phytology ,/n./@植物学;
 pilferage ,/n./@偷竊;
 pineapple ,/n./@菠萝;
+plainsman ,/n./@平原居民;
 plaintiff ,/n./@原告;
 platitude ,/n./@单调;
 plausible ,/adj./@似有道理的;
@@ -718,7 +725,7 @@ schematic ,/adj./@图解的;,/adj./@概要的;
 scientist ,/n./@科学家;
 scrutable ,/adj./@可以了解的;
 sculpture ,/n./@雕塑;
-secession ,/n./@脫離;,/n./@分離;
+secession ,/n./@脫離;,/n./@分離;,/n./@退出;
 secondary ,/adj./@次要的;,/adj./@第二的;
 sedentary ,/adj./@久坐的;,/adj./@坐慣的;,/adj./@定栖的;,/adj./@靜坐的;
 seduction ,/v./@诱惑;
@@ -801,7 +808,7 @@ trademark ,/n./@商標;
 tradition ,/n./@传统;,/n./@惯例;
 transcend ,/v./@超越;,/v./@戰勝;
 transform ,/v./@转换;,/v./@改观;
-transient ,/adj./@短暫的;
+transient ,/adj./@短暫的;,/adj./@暂住的;
 translate ,/v./@翻譯;
 transmute ,/v./@变化;
 transpond ,/v./@轉發;
