--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -93,6 +93,7 @@ burdensome
 bureaucrat
 calculator
 camerlengo
+cannonball
 capability
 capacities
 celebrated
@@ -142,6 +143,7 @@ conductive
 conference
 confession
 confidence
+confiscate
 conformity
 congestion
 congregate
@@ -190,6 +192,7 @@ definitive
 delectable
 delegation
 deliberate
+delinquent
 delusional
 democratic
 denominate
@@ -376,6 +379,7 @@ meditation
 melancholy
 membership
 metallurgy
+methodical
 microscope
 millennium
 millilitre
@@ -391,6 +395,7 @@ motivation
 multiplier
 munificent
 mutability
+mutilation
 myocardial
 mysterious
 navigation
@@ -537,6 +542,7 @@ subsection
 subsequent
 subsidiary
 substitute
+subversive
 successful
 succession
 sufficient
