--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -29,6 +29,7 @@ circumcentre
 circumscribe
 circumstance
 civilization
+cohabitation
 colonization
 commonwealth
 complication
@@ -58,6 +59,7 @@ covetousness
 degeneration
 deliberately
 deliberation
+demographics
 denomination
 disadvantage
 disagreement
@@ -125,9 +127,11 @@ organisation
 organization
 ostentatious
 overestimate
+paramilitary
 participance
 participancy
 particularly
+penitentiary
 periodically
 perseverance
 perspiration
