--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -38,6 +38,7 @@ controversial
 correspondent
 corresponding
 counterattack
+counterweight
 demonstration
 deterioration
 determination
@@ -48,6 +49,7 @@ documentation
 entertainment
 environmental
 establishment
+extermination
 extraordinary
 globalization
 heterogeneous
@@ -90,6 +92,7 @@ seismological
 semiconductor
 sophisticated
 specification
+subordination
 superannuated
 supplementary
 temperamental
