--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -382,6 +382,7 @@ grit
 grow
 gulf
 gulp
+gush
 gust
 hail
 hair
@@ -394,6 +395,7 @@ hand
 hang
 hard
 hare
+hark
 harm
 hash
 hate
@@ -434,6 +436,7 @@ home
 hoof
 hook
 hoop
+hoot
 hope
 host
 hour
