--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -1,6 +1,7 @@
 abbey
 abhor
 abide
+abode
 abort
 about
 abuse
@@ -416,6 +417,7 @@ fever
 fibre
 field
 fiend
+fiery
 fight
 final
 first
@@ -648,8 +650,8 @@ magic
 major
 mango
 mania
-march
 March
+march
 match
 maths
 maxim
@@ -710,6 +712,7 @@ niche
 night
 noble
 noise
+nomad
 north
 notch
 novel
