--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -84,6 +84,7 @@ assert
 assess
 assign
 assist
+assize
 assume
 assure
 astray
@@ -141,6 +142,7 @@ betray
 better
 beware
 beyond
+biceps
 billet
 binary
 bitter
@@ -179,6 +181,7 @@ budgie
 buffer
 buffet
 bullet
+bumper
 bundle
 bunker
 burden
@@ -193,8 +196,8 @@ camera
 campus
 Canada
 cancel
-Cancer
 cancer
+Cancer
 candid
 cannon
 cannot
@@ -226,6 +229,7 @@ change
 chapel
 charge
 chaste
+cheeky
 cheese
 cheque
 cherry
@@ -362,6 +366,7 @@ desire
 detach
 detail
 detect
+detour
 device
 devote
 devout
@@ -416,6 +421,7 @@ empire
 employ
 encore
 endian
+endive
 endure
 energy
 engage
@@ -546,6 +552,7 @@ genome
 gentle
 gently
 gerund
+ghetto
 giggle
 ginger
 glance
@@ -641,6 +648,7 @@ inhale
 inject
 injure
 injury
+inmate
 insane
 insect
 insert
@@ -865,6 +873,7 @@ packet
 paddle
 palace
 palate
+papist
 parade
 parcel
 pardon
@@ -1051,6 +1060,7 @@ ribbon
 riddle
 riffle
 rights
+rigour
 robber
 Robert
 robust
@@ -1352,6 +1362,7 @@ utmost
 utopia
 Utopia
 vacant
+vacate
 vacuum
 vagina
 vainly
