--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -121,6 +121,7 @@ believe
 beloved
 beneath
 benefit
+bereave
 besides
 besiege
 between
@@ -728,6 +729,7 @@ montage
 monthly
 morning
 mulatto
+mundane
 musical
 mustard
 mystery
@@ -835,6 +837,7 @@ perturb
 pervert
 petrify
 phantom
+pharaoh
 phoenix
 physics
 picture
@@ -923,6 +926,7 @@ pyramid
 qualify
 quality
 quantum
+quarter
 quibble
 quicken
 quickly
