--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -30,6 +30,7 @@ advocate
 affinity
 affluent
 aggrieve
+agitator
 aircraft
 airdrome
 airstrip
@@ -62,6 +63,7 @@ antelope
 anterior
 antidote
 anything
+aperitif
 aperture
 aphorism
 apostasy
@@ -142,6 +144,7 @@ campaign
 canister
 cannibal
 capacity
+capstone
 carapace
 cardinal
 careless
@@ -162,6 +165,7 @@ ceremony
 chairman
 champion
 charming
+chastity
 chemical
 chestnut
 childish
@@ -211,6 +215,7 @@ consider
 conspire
 constant
 consumer
+contempt
 contents
 continue
 contract
@@ -264,6 +269,7 @@ defeated
 defector
 defender
 definite
+dejected
 delegate
 delicate
 delusion
@@ -364,6 +370,7 @@ entrance
 entrench
 envelope
 enviable
+envision
 epidemic
 epilogue
 epiphany
@@ -414,6 +421,7 @@ fidelity
 filicide
 firework
 flagship
+flawless
 fleeting
 flexible
 flippant
@@ -471,6 +479,7 @@ handsome
 headache
 headline
 hedgehog
+heraldry
 heritage
 hesitant
 hesitate
@@ -553,6 +562,7 @@ jealousy
 jeopardy
 jetliner
 judicial
+junction
 juvenile
 kangaroo
 keyboard
@@ -655,6 +665,7 @@ nickname
 nineteen
 nominate
 nonsense
+normalcy
 notation
 notebook
 November
@@ -706,6 +717,7 @@ painting
 Paladins
 palpable
 pantheon
+parabola
 paradigm
 paradise
 parallax
@@ -727,6 +739,7 @@ penalize
 pendulum
 penitent
 pentagon
+penumbra
 perceive
 periodic
 personal
@@ -782,6 +795,7 @@ protocol
 prudence
 punctual
 puncture
+punitive
 purchase
 quackery
 quantity
@@ -826,6 +840,7 @@ restrain
 restrict
 retrieve
 revenant
+reversal
 revision
 rhapsody
 ridicule
@@ -933,6 +948,7 @@ subtract
 suburban
 succinct
 suddenly
+suffrage
 suitable
 suitcase
 sunshine
