--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -239,6 +239,7 @@ demanding
 democracy
 departure
 dependent
+depravity
 deprecate
 desertion
 designate
@@ -331,6 +332,7 @@ etiquette
 evaporate
 evolution
 Excalibur
+excavator
 exceeding
 excellent
 exception
@@ -369,6 +371,7 @@ financial
 firstname
 fisherman
 flattened
+flippancy
 fluctuate
 following
 footprint
@@ -545,6 +548,7 @@ objection
 objective
 oblivious
 obnoxious
+obscurity
 obsession
 obstinacy
 obstinate
@@ -581,6 +585,7 @@ partially
 partition
 passenger
 passer-by
+patriarch
 patricide
 patronage
 patronize
@@ -599,11 +604,13 @@ pervasive
 pessimism
 petroleum
 petulance
+pharaonic
 phonetics
 physician
 phytology
 pilferage
 pineapple
+plainsman
 plaintiff
 platitude
 plausible
