--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -106,7 +106,7 @@ intelligence ,/n./@智慧;
 intermediary ,/n./@调解人;
 intermediate ,/adj./@中间的;
 intermission ,/n./@幕間休息;,/n./@暫停;,/n./@中斷;
-intersection ,/n./@交集;
+intersection ,/n./@交集;,/n./@交点;,/n./@十字路口;,/n./@相交;
 interstellar ,/adj./@星際的;
 intervention ,/n./@介入;,/n./@調停;,/n./@干涉;
 intransigent ,/adj./@不妥协的;
