--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -97,6 +97,7 @@ fat ,/adj./@肥胖的;
 fax ,/n./@傳眞;
 FBI ,/n.//abbr./@聯邦調查局;
 few ,/adj./@很少的;
+fig ,/n./@无花果;,/n./@无花果树;
 fin ,/n./@鰭;,/n./@翼;
 fir ,/n./@杉木;
 fit ,/v./@適合;
@@ -267,6 +268,7 @@ rub ,/v./@擦;,/v./@摩擦;
 rug ,/n./@小地毯;
 run ,/v./@跑;
 rut ,/n./@發情期;,/n./@性衝動;,/n./@凹槽;,/n./@慣例;
+rye ,/n./@黑麦;,/n./@黑麦田;,/n./@黑麦酒;
 sad ,/adj./@悲傷的;
 sag ,/adj./@松弛;,/vi./@下垂;,/vi./@萎靡;
 sap ,/n./@精力;,/n./@樹液;,/n./@元氣;,/n./@活力;
