--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -399,7 +399,7 @@ hark ,/vi./@听;
 harm ,/v./@傷害;,/n./@傷害;,/n./@損害;,/vt./@危害;,/vt./@损害;
 hash ,/n./@混雜;
 hate ,/v./@恨;,/v./@厭;
-haul ,/v./@拖拉;
+haul ,/v./@拖;,/vt./@运输;,/n./@大量;,/n./@大批;,/n./@旅程;
 have ,/v./@有;
 hawk ,/n./@鷹;,/v./@兜售;,/v./@清嗓;
 haze ,/n./@霧霾;
@@ -550,6 +550,7 @@ lump ,/n./@塊;,/n./@腫塊;,/n./@團;
 lung ,/n./@肺;
 lure ,/n./@誘惑;,/n./@誘餌;
 lurk ,/v./@潛伏;,/v./@隱藏;
+lush ,/adj./@茂盛的;,/adj./@葱翠的;,/adj./@豪华的;,/adj./@性感的;
 lust ,/n./@慾望;
 luxe ,/n./@奢侈;
 mace ,/n./@狼牙棒;,/n./@權杖;
@@ -617,6 +618,7 @@ moth ,/n./@蛾;
 move ,/v./@動;
 much ,/adv./@很;
 muck ,/n./@淤泥;,/v./@弄脏;
+mule ,/n./@骡子;,/n./@拖鞋;,/n./@固执的人;
 muse ,/v./@沉思;,/v./@默想;
 musk ,/n./@麝香;
 must ,/aux./@必須;
