--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -179,6 +179,7 @@ bunch ,/n./@束;
 burst ,/vi./@爆炸;
 bushy ,/adj./@濃密的;
 busty ,/adj./@大胸脯的;,/adj./@胸部豐滿的;
+cabin ,/n./@小木屋;,/n./@房舱;,/n./@座舱;
 cable ,/n./@電纜;,/n./@電報;
 cache ,/n./@電腦髙速緩衝存儲器;
 camel ,/n./@駱駝;
@@ -214,8 +215,8 @@ chili ,/n./@辣椒;,/n./@紅辣椒;
 chill ,/v./@變冷;,/v./@冷卻;
 chime ,/v./@鳴響;,/n./@鐘聲;,/n./@和諧;
 chimp ,/n./@黑猩猩;
-China ,/n./@中國;
 china ,/n./@陶瓷;
+China ,/n./@中國;
 chirp ,/n./@吱喳聲;
 chive ,/n./@香蔥;
 choke ,/v./@噎;
@@ -650,8 +651,8 @@ magic ,/n./@魔術;
 major ,/adj./@主要的;
 mango ,/n./@芒果;
 mania ,/n./@狂熱;
-March ,/n./@三月;
 march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
+March ,/n./@三月;
 match ,/v./@競賽;,/v./@相配;,/n./@火柴;,/v./@敵得過;,/n./@對手;
 maths ,/n./@數學;
 maxim ,/n./@格言;,/n./@準則;,/n./@座右銘;
@@ -899,7 +900,7 @@ salad ,/n./@色拉;,/n./@涼拌菜;
 salon ,/n./@沙龍;,/n./@客廳;,/n./@畫廊;
 salty ,/adj./@鹹的;
 samen ,/n./@精液;
-sauce ,/n./@沙司;,/n./@醬油;
+sauce ,/n./@沙司;,/n./@醬油;,/n./@调味汁;
 savor ,/n./@滋味;,/n./@氣味;,/n./@食欲;,/v./@品嘗;
 scale ,/n./@魚鱗;,/n./@規模;
 scalp ,/n./@頭皮;
