--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -436,6 +436,7 @@ entail ,/v./@遺留;,/v./@蘊含;,/v./@需要;
 entice ,/v./@引诱;,/v./@诱惑;,/v./@吸引;,/v./@诱使;,/v./@怂恿;
 entire ,/adj./@整個的;,/adj./@全部的;
 entity ,/n./@實體;
+enzyme ,/n./@酶;
 equate ,/v./@等同;
 equity ,/n./@公平;
 eraser ,/n./@橡皮;,/n./@清除器;,/n./@擦除器;
@@ -707,6 +708,7 @@ legacy ,/n./@遺贈;,/n./@遺產;
 legend ,/n./@傳奇;,/n./@傳說;
 legion ,/n./@軍團;,/n./@衆多;,/n./@軍隊;
 length ,/n./@長度;
+lentil ,/n./@小扁豆;
 lesion ,/n./@損害;
 lesson ,/n./@課程;,/n./@教訓;
 lethal ,/adj./@致命的;
@@ -922,6 +924,7 @@ please ,/v./@請;
 pledge ,/v./@保證;,/v./@发誓;
 plenty ,/adj./@大量的;
 plight ,/n./@苦痛;
+plough ,/n./@犁;,/vt./@犁;,/vi./@犁地;
 plunge ,/v./@猛投;,/v./@猛跌;,/v./@猛衝;
 plural ,/adj./@複數的;,/n./@複數;
 pocket ,/n./@口袋;
@@ -1161,6 +1164,8 @@ sleeve ,/n./@袖子;
 slight ,/adj./@稍微的;
 slogan ,/n./@標語;
 slouch ,/vi./@低头垂肩地坐着;,/vi./@无精打采地站着;
+sludge ,/n./@淤泥;,/n./@烂泥;,/n./@油泥;
+sluice ,/n./@水闸;,/n./@水道;,/n./@冲洗;,/vt./@冲洗;,/vi./@泄出;
 smooch ,/v./@接吻;,/v./@弄髒;
 smooth ,/adj./@光滑的;,/adj./@順利的;
 smudge ,/v./@弄髒;
@@ -1211,6 +1216,7 @@ squirm ,/vi./@蠕動;,/vi./@扭動;,/vi./@局促;,/vi./@扭捏;
 squirt ,/v./@噴射;
 stable ,/adj./@穩定的;
 stance ,/n./@立場;,/n./@姿態;,/n./@位置;
+staple ,/adj./@主要的;,/n./@主食;,/n./@订书钉;,/n./@主要内容;,/vt./@用订书机订;,/n./@U形钉;
 starve ,/v./@挨餓;
 static ,/adj./@靜態的;
 statue ,/n./@雕像;
@@ -1327,6 +1333,7 @@ trifle ,/n./@瑣事;
 triple ,/adj.//pref./@三的;
 trivet ,/n./@三脚铁架;,/n./@三脚台架;
 trivia ,/n./@瑣事;
+trough ,/n./@水槽;,/n./@槽;,/n./@波谷;,/n./@低谷;
 tumble ,/v./@跌倒;,/v./@摔跤;,/v./@打滾;
 tumult ,/n./@混乱;,/n./@骚乱;,/n./@喧闹;,/n./@喧哗;,/#syn/@turmoil;
 tunnel ,/n./@隧道;
@@ -1359,8 +1366,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-utopia ,/n./@烏托邦;
 Utopia ,/n./@烏托邦;
+utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
