--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -77,11 +77,13 @@ appraise ,/v./@评价;,/v./@估价;,/v./@鉴定;
 approach ,/v./@接近;,/n./@途徑;
 approval ,/n./@赞成;
 aquarium ,/n./@水族館;,/n./@水缸;,/n./@養魚池;
+aqueduct ,/n./@沟渠;,/n./@水渠;
 arborist ,/n./@园艺设计师;
 archaism ,/n./@古語;
 arguable ,/adj./@有争议的;
 argument ,/n./@论证;,/n./@论点;
 armament ,/n./@武器;,/n./@軍備;
+aromatic ,/adj./@芳香的;,/n./@香料;
 arrogant ,/adj./@傲慢的;,/adj./@自大的;
 arrogate ,/v./@冒称;,/v./@霸占;
 artistic ,/adj./@艺术的;
@@ -170,6 +172,7 @@ chemical ,/adj./@化学的;,/n./@化学药品;,/n./@化学制品;
 chestnut ,/n./@栗子;,/n./@栗樹;
 childish ,/adj./@幼稚的;
 children ,/n./@孩子@们;
+cinnamon ,/n./@桂皮;,/n./@肉桂树;,/n./@浅黄褐色;
 circular ,/adj./@循环的;
 citation ,/n./@引用;
 civilian ,/n./@市民;
@@ -223,7 +226,7 @@ contrary ,/n./@相反的;,/n./@相反;
 contrast ,/n./@对比;
 contrite ,/adj./@後悔的;
 contrive ,/v./@設計;,/v./@發明;,/v./@謀劃;
-converge ,/v./@(使)汇聚;
+converge ,/vi./@汇聚;,/vi./@相交;
 converse ,/v./@交談;,/v./@交往;,/n./@相反;,/adj./@相反的;,/adj./@顛倒的;,/n./@逆向;
 convince ,/v./@使信服;
 coronary ,/adj./@冠狀動脈的;
@@ -332,6 +335,7 @@ dominion ,/n./@主权;
 donation ,/n./@捐赠;
 doubtful ,/adj./@怀疑的;
 doughnut ,/n./@甜甜圈;
+dovetail ,/vi./@吻合;,/vt./使@吻合;
 download ,/v./@下载;
 downward ,/adj./@向下的;,/adv./@向下;
 dumpling ,/n./@餃子;,/n./@湯糰;,/n./@麵糰;
@@ -634,7 +638,7 @@ mitigate ,/v./@緩和;,/v./@減輕;
 modality ,/n./@形式;,/n./@形態;
 moderate ,/adj./@温和的;,/adj./@适度的;
 molecule ,/n./@分子;
-momentum ,/n./@勢頭;,/n./@動量;
+momentum ,/n./@勢頭;,/n./@動量;,/n./@动力;
 monarchy ,/n./@君主制;
 monopoly ,/n./@垄断;
 monument ,/n./@纪念碑;
@@ -694,6 +698,7 @@ optician ,/n./@眼科醫生;
 optimism ,/n./@乐观;,/n./@乐观主义;
 optimize ,/v./@优化;
 optional ,/adj./@可选的;,/adj./@随意的;
+opulence ,/n./@华丽;,/n./@富丽堂皇;,/n./@奢侈;,/n./@豪华;
 ordinary ,/adj./@普通的;,/adj./@平常的;
 ordnance ,/n./@軍火;,/n./@軍械;,/n./@軍需;,/n./@大炮;
 organize ,/v./@組織;,/v./@籌備;
