--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -10,6 +10,7 @@ aggregation
 agriculture
 altercation
 alternative
+amphetamine
 analyzation
 anticipated
 apocalyptic
@@ -286,8 +287,8 @@ regurgitate
 reluctantly
 remembrance
 reminiscent
-Renaissance
 renaissance
+Renaissance
 replacement
 requirement
 resemblance
