--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -179,6 +179,7 @@ bunch
 burst
 bushy
 busty
+cabin
 cable
 cache
 camel
@@ -214,8 +215,8 @@ chili
 chill
 chime
 chimp
-China
 china
+China
 chirp
 chive
 choke
@@ -650,8 +651,8 @@ magic
 major
 mango
 mania
-March
 march
+March
 match
 maths
 maxim
