--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -436,6 +436,7 @@ entail
 entice
 entire
 entity
+enzyme
 equate
 equity
 eraser
@@ -707,6 +708,7 @@ legacy
 legend
 legion
 length
+lentil
 lesion
 lesson
 lethal
@@ -922,6 +924,7 @@ please
 pledge
 plenty
 plight
+plough
 plunge
 plural
 pocket
@@ -1161,6 +1164,8 @@ sleeve
 slight
 slogan
 slouch
+sludge
+sluice
 smooch
 smooth
 smudge
@@ -1211,6 +1216,7 @@ squirm
 squirt
 stable
 stance
+staple
 starve
 static
 statue
@@ -1327,6 +1333,7 @@ trifle
 triple
 trivet
 trivia
+trough
 tumble
 tumult
 tunnel
@@ -1359,8 +1366,8 @@ urbane
 urgent
 useful
 utmost
-utopia
 Utopia
+utopia
 vacant
 vacate
 vacuum
