--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -167,6 +167,7 @@ butcher
 buttock
 cabbage
 cabinet
+calcium
 canvass
 capable
 capella
@@ -203,8 +204,8 @@ charter
 cherish
 chicken
 chimney
-Chinese
 chinese
+Chinese
 chowder
 chronic
 chuckle
@@ -1214,8 +1215,8 @@ vampire
 variety
 various
 varsity
-vatican
 Vatican
+vatican
 vehicle
 ventage
 venture
