--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -77,11 +77,13 @@ appraise
 approach
 approval
 aquarium
+aqueduct
 arborist
 archaism
 arguable
 argument
 armament
+aromatic
 arrogant
 arrogate
 artistic
@@ -170,6 +172,7 @@ chemical
 chestnut
 childish
 children
+cinnamon
 circular
 citation
 civilian
@@ -332,6 +335,7 @@ dominion
 donation
 doubtful
 doughnut
+dovetail
 download
 downward
 dumpling
@@ -694,6 +698,7 @@ optician
 optimism
 optimize
 optional
+opulence
 ordinary
 ordnance
 organize
