--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -180,6 +180,7 @@ compliant
 component
 composure
 concourse
+condiment
 condition
 conductor
 confident
@@ -317,6 +318,7 @@ enlighten
 enrapture
 ensurance
 entertain
+entourage
 enumerate
 enunciate
 ephemeral
@@ -660,6 +662,7 @@ provision
 proximity
 pubescent
 pulsation
+pulverize
 punctuate
 pupillary
 purgatory
