--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -369,6 +369,7 @@ likelihood ,/n./@可能;,/n./@相似性;
 linguistic ,/adj./@語言的;,/adj./@語言學的;
 loneliness ,/n./@寂寞;
 mackintosh ,/n./@雨衣;
+magistrate ,/n./@地方执法官;
 mainstream ,/n./@主流;
 malevolent ,/adj./@惡毒的;,/adj./@有惡意的;
 manipulate ,/v./@操纵;,/v./@操作;,/v./@摆布;
