--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -167,6 +167,7 @@ butcher ,/n./@屠夫;
 buttock ,/n./@半邊臀部;
 cabbage ,/n./@捲心菜;,/n./@圓白菜;
 cabinet ,/n./@內閣;,/n./@壁櫥;
+calcium ,/n./@钙;
 canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
 capable ,/adj./@潛在的;,/adj./@可能的;
 capella ,/n./@教堂;
@@ -203,8 +204,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-Chinese ,/n./@漢語;
 chinese ,/n./@漢語;
+Chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -1214,8 +1215,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-vatican ,/n./@梵蒂岡;
 Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
+vatican ,/n./@梵蒂岡;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
