--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -180,6 +180,7 @@ compliant ,/adj./@順從的;
 component ,/n./@成分;,/n./@组件;,/adj./@组成的;
 composure ,/n./@鎮定;,/n./@沉著;,/n./@鎮定;
 concourse ,/n./@廣場;,/n./@集合;,/n./@合流;,/n./@群眾;
+condiment ,/n./@调味品;,/n./@调味汁;
 condition ,/n./@条件;,/n./@情况;
 conductor ,/n./@导体;,/n./@指挥;,/n./@售票员;,/n./@列车长;,/n./@向导;
 confident ,/adj./@自信的;
@@ -317,6 +318,7 @@ enlighten ,/v./@启发;,/v./@启蒙;
 enrapture ,/v./@使狂喜;,/v./@使著迷;
 ensurance ,/n./@保障;
 entertain ,/v./使@娱乐;
+entourage ,/n./@随从;
 enumerate ,/v./@列舉;,/v./@枚舉;
 enunciate ,/v./@明確表達;
 ephemeral ,/adj./@短暫的;,/adj./@朝生暮死的;
@@ -660,6 +662,7 @@ provision ,/n./@提供;
 proximity ,/n./@親近;,/n./@接近;,/n./@鄰近;
 pubescent ,/adj./@青春期的;,/adj./@有軟毛的;
 pulsation ,/n./@脈動;,/v./@搏動;,/v./@悸動;,/v./@振動;
+pulverize ,/vt./@弄碎;,/vt./@击败;
 punctuate ,/v./@加標點;,/v./@不時打斷;
 pupillary ,/adj./@瞳孔的;,/adj./@学生的;,/adj./@被监护人的;
 purgatory ,/n./@炼狱;
